Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Viện kiểm sát nêu căn cứ bác đề nghị tạm đình chỉ xét xử bà Nguyễn Thị Thanh Nhàn",
+    "content": "Viện kiểm sát đã bác bỏ đề nghị tạm đình chỉ xét xử đối với bà Nguyễn Thị Thanh Nhàn, cựu chủ tịch Công ty AIC, với lý do đủ căn cứ xác định bà là chủ mưu trong vụ án gây thiệt hại 17 tỉ đồng. Luật sư bào chữa cho bà Nhàn lập luận rằng việc bà vắng mặt khiến không thể xác định năng lực chịu trách nhiệm hình sự của bà. Tuy nhiên, Viện kiểm sát cho rằng vai trò của bà Nhàn trong vụ án là rõ ràng và không cần tạm đình chỉ xét xử.",
+    "link": "https://tuoitre.vn/vien-kiem-sat-neu-can-cu-bac-de-nghi-tam-dinh-chi-xet-xu-ba-nguyen-thi-thanh-nhan-20250321104506882.htm",
+    "cat": "phap-luat",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Tại sao Viện kiểm sát bác đề nghị tạm đình chỉ xét xử bà Nguyễn Thị Thanh Nhàn?",
+    "answers": [
+      {
+        "text": "Vì đủ căn cứ xác định bà Nhàn là chủ mưu trong vụ án.",
+        "correct": true
+      },
+      {
+        "text": "Vì luật sư không đưa ra đủ chứng cứ.",
+        "correct": false
+      },
+      {
+        "text": "Vì bà Nhàn không thể tham gia phiên tòa.",
+        "correct": false
+      },
+      {
+        "text": "Vì vụ án không có nhiều bị cáo liên quan.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Anh: Nga không thể phủ quyết việc triển khai quân đội phương Tây ở Ukraine",
     "content": "Ngoại trưởng Anh David Lammy khẳng định rằng Nga không có quyền phủ quyết việc triển khai quân đội phương Tây tại Ukraine nhằm gìn giữ hòa bình. Ông nhấn mạnh rằng Tổng thống Putin cần chấp nhận các đề xuất ngừng bắn và không thể kiểm soát sự hiện diện quân sự nước ngoài ở Ukraine. Bên cạnh đó, Thủ tướng Anh Keir Starmer đã đề xuất kế hoạch triển khai hơn 10.000 binh sĩ để đảm bảo an ninh sau khi xung đột kết thúc.",
     "link": "https://dantri.com.vn/the-gioi/anh-nga-khong-the-phu-quyet-viec-trien-khai-quan-doi-phuong-tay-o-ukraine-20250321102834064.htm",
@@ -669,33 +696,6 @@
     ]
   },
   {
-    "title": "Sởi lây nhanh hơn cúm, bác sĩ khuyến cáo tiêm vaccine sớm",
-    "content": "Sởi có tốc độ lây lan rất nhanh, khả năng truyền nhiễm cao, khiến bác sĩ khuyến cáo tiêm vaccine sớm để bảo vệ sức khỏe cộng đồng. Vaccine sởi được chỉ định cho trẻ từ 9 tháng tuổi, nhưng hiện Bộ Y tế đã cho phép mở rộng độ tuổi tiêm ngừa sởi từ 6 tháng. Tỷ lệ tiêm chủng hiện nay thấp dưới 90% do ảnh hưởng của dịch Covid-19, trong khi Tổ chức Y tế Thế giới khuyến cáo cần đạt trên 95% để kiểm soát virus. Số ca mắc sởi đang gia tăng và các nhóm trẻ nhỏ là đối tượng có nguy cơ cao.",
-    "link": "https://vnexpress.net/soi-lay-nhanh-hon-cum-bac-si-khuyen-cao-tiem-vaccine-som-4863923.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 9,
-    "question": "Tại sao bác sĩ khuyến cáo tiêm vaccine sởi sớm?",
-    "answers": [
-      {
-        "text": "Để ngăn chặn sự lây lan nhanh chóng của virus sởi.",
-        "correct": true
-      },
-      {
-        "text": "Vì bệnh sởi không nguy hiểm như cúm.",
-        "correct": false
-      },
-      {
-        "text": "Vaccine sởi chỉ cần tiêm một lần.",
-        "correct": false
-      },
-      {
-        "text": "Để trẻ không bị sốt khi mắc bệnh.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "30 tuổi mới phát hiện mắc bệnh tim bẩm sinh",
     "content": "Anh Tân, 31 tuổi, vừa phát hiện mắc bệnh hẹp eo động mạch chủ, một loại bệnh tim bẩm sinh, sau nhiều năm không có triệu chứng rõ ràng. Bệnh gây ra tình trạng tăng huyết áp kháng trị, và anh đã được can thiệp bằng cách đặt stent để giảm áp lực trong động mạch. Các bác sĩ cảnh báo rằng bệnh này có thể dẫn đến nhiều biến chứng nguy hiểm nếu không được theo dõi và điều trị kịp thời.",
     "link": "https://vnexpress.net/30-tuoi-moi-phat-hien-mac-benh-tim-bam-sinh-4862869.html",
@@ -718,6 +718,33 @@
       },
       {
         "text": "Bệnh mạch vành",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sởi lây nhanh hơn cúm, bác sĩ khuyến cáo tiêm vaccine sớm",
+    "content": "Sởi có tốc độ lây lan rất nhanh, khả năng truyền nhiễm cao, khiến bác sĩ khuyến cáo tiêm vaccine sớm để bảo vệ sức khỏe cộng đồng. Vaccine sởi được chỉ định cho trẻ từ 9 tháng tuổi, nhưng hiện Bộ Y tế đã cho phép mở rộng độ tuổi tiêm ngừa sởi từ 6 tháng. Tỷ lệ tiêm chủng hiện nay thấp dưới 90% do ảnh hưởng của dịch Covid-19, trong khi Tổ chức Y tế Thế giới khuyến cáo cần đạt trên 95% để kiểm soát virus. Số ca mắc sởi đang gia tăng và các nhóm trẻ nhỏ là đối tượng có nguy cơ cao.",
+    "link": "https://vnexpress.net/soi-lay-nhanh-hon-cum-bac-si-khuyen-cao-tiem-vaccine-som-4863923.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 9,
+    "question": "Tại sao bác sĩ khuyến cáo tiêm vaccine sởi sớm?",
+    "answers": [
+      {
+        "text": "Để ngăn chặn sự lây lan nhanh chóng của virus sởi.",
+        "correct": true
+      },
+      {
+        "text": "Vì bệnh sởi không nguy hiểm như cúm.",
+        "correct": false
+      },
+      {
+        "text": "Vaccine sởi chỉ cần tiêm một lần.",
+        "correct": false
+      },
+      {
+        "text": "Để trẻ không bị sốt khi mắc bệnh.",
         "correct": false
       }
     ]
@@ -808,33 +835,6 @@
     ]
   },
   {
-    "title": "Xe tải đâm nhau, hai người chết",
-    "content": "Sáng 21/3, tại xã Suối Bạc, huyện Sơn Hòa, Phú Yên, một vụ tai nạn nghiêm trọng đã xảy ra khi xe tải do anh Võ Tấn Khoanh điều khiển đâm vào đuôi xe tải khác đang dừng do hư hỏng. Cú tông mạnh đã khiến phần đầu xe tải biến dạng hoàn toàn, hai người trong xe bị mắc kẹt và tử vong tại chỗ. Lực lượng cứu hộ đã có mặt để đưa thi thể nạn nhân ra ngoài, trong khi nguyên nhân vụ tai nạn đang được điều tra.",
-    "link": "https://vnexpress.net/xe-tai-dam-nhau-hai-nguoi-chet-4864002.html",
-    "cat": "phap-luat",
-    "positivity": 1,
-    "importance": 8,
-    "question": "Tai nạn xe tải ở Phú Yên đã dẫn đến hậu quả gì?",
-    "answers": [
-      {
-        "text": "Hai người tử vong",
-        "correct": true
-      },
-      {
-        "text": "Xe tải bị hư hỏng",
-        "correct": false
-      },
-      {
-        "text": "Có nhiều người bị thương",
-        "correct": false
-      },
-      {
-        "text": "Tài xế bị phạt tiền",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đâm đuôi xe tải, hai người tử vong",
     "content": "Vào sáng ngày 21/3, một vụ tai nạn nghiêm trọng đã xảy ra trên quốc lộ 25, tỉnh Phú Yên khi xe tải do anh Võ Tấn Khoanh điều khiển đâm vào đuôi xe tải khác đang dừng vì hư hỏng. Cú va chạm mạnh làm phần đầu xe tải của anh Khoanh biến dạng và hai người trên xe đã bị mắc kẹt trong cabin, dẫn đến tử vong. Lực lượng cứu hộ đã phải mất gần một tiếng đồng hồ để đưa thi thể nạn nhân ra ngoài, trong khi nguyên nhân của tai nạn vẫn đang được điều tra.",
     "link": "https://vnexpress.net/dam-duoi-xe-tai-hai-nguoi-tu-vong-4864002.html",
@@ -857,6 +857,33 @@
       },
       {
         "text": "Vì xe tải chạy quá tốc độ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Xe tải đâm nhau, hai người chết",
+    "content": "Sáng 21/3, tại xã Suối Bạc, huyện Sơn Hòa, Phú Yên, một vụ tai nạn nghiêm trọng đã xảy ra khi xe tải do anh Võ Tấn Khoanh điều khiển đâm vào đuôi xe tải khác đang dừng do hư hỏng. Cú tông mạnh đã khiến phần đầu xe tải biến dạng hoàn toàn, hai người trong xe bị mắc kẹt và tử vong tại chỗ. Lực lượng cứu hộ đã có mặt để đưa thi thể nạn nhân ra ngoài, trong khi nguyên nhân vụ tai nạn đang được điều tra.",
+    "link": "https://vnexpress.net/xe-tai-dam-nhau-hai-nguoi-chet-4864002.html",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 8,
+    "question": "Tai nạn xe tải ở Phú Yên đã dẫn đến hậu quả gì?",
+    "answers": [
+      {
+        "text": "Hai người tử vong",
+        "correct": true
+      },
+      {
+        "text": "Xe tải bị hư hỏng",
+        "correct": false
+      },
+      {
+        "text": "Có nhiều người bị thương",
+        "correct": false
+      },
+      {
+        "text": "Tài xế bị phạt tiền",
         "correct": false
       }
     ]
@@ -1473,33 +1500,6 @@
     ]
   },
   {
-    "title": "Nhà trường phủ nhận việc học sinh phải đóng quỹ hội trại 5 triệu đồng",
-    "content": "Hiệu trưởng Trường THPT Phan Châu Trinh tại Đà Nẵng đã phủ nhận thông tin cho rằng học sinh phải đóng quỹ hội trại 5 triệu đồng, khẳng định đây là tin đồn không chính xác. Ông Nguyễn Quang Hưng cho biết trường chỉ tổ chức hội trại cho khối 11 và mọi chi phí sẽ được thống nhất với phụ huynh. Ông cũng nhấn mạnh rằng không có đòi hỏi phải thuê biên đạo cho các hoạt động văn nghệ của trường.",
-    "link": "https://dantri.com.vn/giao-duc/nha-truong-phu-nhan-viec-hoc-sinh-phai-dong-quy-hoi-trai-5-trieu-dong-20250320185132628.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Nhà trường có yêu cầu học sinh đóng quỹ hội trại 5 triệu đồng không?",
-    "answers": [
-      {
-        "text": "Không, nhà trường không yêu cầu đóng quỹ này.",
-        "correct": true
-      },
-      {
-        "text": "Có, học sinh phải đóng quỹ 5 triệu đồng.",
-        "correct": false
-      },
-      {
-        "text": "Nhà trường đang xem xét việc thu quỹ hội trại.",
-        "correct": false
-      },
-      {
-        "text": "Học sinh phải đóng quỹ nhưng số tiền thấp hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "'Nổ' thực phẩm chức năng như thuốc chữa bệnh",
     "content": "Bài viết chỉ ra tình trạng người tiêu dùng bị lừa đảo bởi quảng cáo thổi phồng công dụng của thực phẩm chức năng, khiến họ nhầm lẫn giữa thực phẩm chức năng và thuốc chữa bệnh. Nhiều trường hợp đã dẫn đến hậu quả nghiêm trọng cho sức khỏe, như ngộ độc hoặc vô sinh do sử dụng sản phẩm không rõ nguồn gốc. Bộ Y tế và các chuyên gia khuyến cáo người dân cần thận trọng khi sử dụng thực phẩm chức năng, chỉ nên dùng khi cần thiết và tham khảo ý kiến chuyên gia trước khi sử dụng.",
     "link": "https://vnexpress.net/no-thuc-pham-chuc-nang-nhu-thuoc-chua-benh-4862172.html",
@@ -1522,6 +1522,33 @@
       },
       {
         "text": "Thực phẩm chức năng không cần kiểm tra nguồn gốc.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nhà trường phủ nhận việc học sinh phải đóng quỹ hội trại 5 triệu đồng",
+    "content": "Hiệu trưởng Trường THPT Phan Châu Trinh tại Đà Nẵng đã phủ nhận thông tin cho rằng học sinh phải đóng quỹ hội trại 5 triệu đồng, khẳng định đây là tin đồn không chính xác. Ông Nguyễn Quang Hưng cho biết trường chỉ tổ chức hội trại cho khối 11 và mọi chi phí sẽ được thống nhất với phụ huynh. Ông cũng nhấn mạnh rằng không có đòi hỏi phải thuê biên đạo cho các hoạt động văn nghệ của trường.",
+    "link": "https://dantri.com.vn/giao-duc/nha-truong-phu-nhan-viec-hoc-sinh-phai-dong-quy-hoi-trai-5-trieu-dong-20250320185132628.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Nhà trường có yêu cầu học sinh đóng quỹ hội trại 5 triệu đồng không?",
+    "answers": [
+      {
+        "text": "Không, nhà trường không yêu cầu đóng quỹ này.",
+        "correct": true
+      },
+      {
+        "text": "Có, học sinh phải đóng quỹ 5 triệu đồng.",
+        "correct": false
+      },
+      {
+        "text": "Nhà trường đang xem xét việc thu quỹ hội trại.",
+        "correct": false
+      },
+      {
+        "text": "Học sinh phải đóng quỹ nhưng số tiền thấp hơn.",
         "correct": false
       }
     ]
@@ -3518,6 +3545,33 @@
     ]
   },
   {
+    "title": "Viêm xoang có lây không?",
+    "content": "Viêm xoang là tình trạng viêm các xoang cạnh mũi không phải là bệnh truyền nhiễm, do đó không lây từ người này sang người khác. Tuy nhiên, sống chung với người bị viêm xoang trong giai đoạn cấp tính có thể làm tăng nguy cơ lây nhiễm các tác nhân gây bệnh như virus hoặc vi khuẩn qua đường hô hấp. Để giảm nguy cơ nhiễm trùng, nên thực hiện các biện pháp phòng ngừa như rửa tay thường xuyên và tránh dùng chung đồ dùng cá nhân.",
+    "link": "https://vnexpress.net/viem-xoang-co-lay-khong-4863754.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Viêm xoang có lây từ người sang người không?",
+    "answers": [
+      {
+        "text": "Không, viêm xoang không lây từ người sang người.",
+        "correct": true
+      },
+      {
+        "text": "Có, viêm xoang rất dễ lây.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ lây qua đường tình dục.",
+        "correct": false
+      },
+      {
+        "text": "Có thể lây qua nước uống.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "10 năm không con do dính buồng tử cung",
     "content": "Chị Hà Thu, 33 tuổi, đã trải qua 10 năm không có con do dính buồng tử cung sau nhiều lần sảy thai và tác động phẫu thuật. Sau khi được chẩn đoán vô sinh thứ phát do dính buồng tử cung và tắc vòi trứng, chị đã trải qua ca phẫu thuật nội soi để cắt dính và điều trị. Cuối cùng, nhờ thụ tinh ống nghiệm, chị đã sinh con gái đầu lòng sau nhiều nỗ lực và gặp nhiều khó khăn trong thai kỳ.",
     "link": "https://vnexpress.net/10-nam-khong-con-do-dinh-buong-tu-cung-4863585.html",
@@ -3567,33 +3621,6 @@
       },
       {
         "text": "Hà Nội - Mumbai và Hà Nội - Ahmedabad",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Viêm xoang có lây không?",
-    "content": "Viêm xoang là tình trạng viêm các xoang cạnh mũi không phải là bệnh truyền nhiễm, do đó không lây từ người này sang người khác. Tuy nhiên, sống chung với người bị viêm xoang trong giai đoạn cấp tính có thể làm tăng nguy cơ lây nhiễm các tác nhân gây bệnh như virus hoặc vi khuẩn qua đường hô hấp. Để giảm nguy cơ nhiễm trùng, nên thực hiện các biện pháp phòng ngừa như rửa tay thường xuyên và tránh dùng chung đồ dùng cá nhân.",
-    "link": "https://vnexpress.net/viem-xoang-co-lay-khong-4863754.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Viêm xoang có lây từ người sang người không?",
-    "answers": [
-      {
-        "text": "Không, viêm xoang không lây từ người sang người.",
-        "correct": true
-      },
-      {
-        "text": "Có, viêm xoang rất dễ lây.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ lây qua đường tình dục.",
-        "correct": false
-      },
-      {
-        "text": "Có thể lây qua nước uống.",
         "correct": false
       }
     ]
@@ -4726,33 +4753,6 @@
       },
       {
         "text": "Họ đang tổ chức một sự kiện tại đó.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ông Trump muốn giảm lãi suất, Fed bất tuân",
-    "content": "Tổng thống Mỹ Donald Trump đã yêu cầu Cục Dự trữ Liên bang Mỹ (Fed) giảm lãi suất để giảm bớt tác động từ các mức thuế quan mà ông áp dụng. Trong khi Fed quyết định giữ nguyên lãi suất và cảnh báo về sự gia tăng lạm phát, Trump nhấn mạnh rằng lãi suất nên được cắt giảm để hỗ trợ nền kinh tế. Ông cũng cho rằng việc tăng thuế quan có thể dẫn đến một số rối loạn trong kinh tế Mỹ nhưng tin rằng điều này sẽ dẫn đến một 'kỷ nguyên vàng'.",
-    "link": "https://tuoitre.vn/ong-trump-muon-giam-lai-suat-fed-bat-tuan-20250320103225785.htm",
-    "cat": "kinh-doanh",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Ông Trump đã yêu cầu Fed làm gì?",
-    "answers": [
-      {
-        "text": "Giảm lãi suất",
-        "correct": true
-      },
-      {
-        "text": "Tăng lãi suất",
-        "correct": false
-      },
-      {
-        "text": "Giữ nguyên lãi suất",
-        "correct": false
-      },
-      {
-        "text": "Ngừng áp thuế quan",
         "correct": false
       }
     ]
