Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Khởi tố thanh niên tạo bill chuyển tiền giả lừa lấy tiền thật",
+    "content": "Ngày 21-3, Công an tỉnh Nghệ An đã khởi tố Nguyễn Quang Chinh, 24 tuổi, vì hành vi lừa đảo chiếm đoạt tài sản. Chinh đã tạo hóa đơn chuyển tiền giả để lừa một thiếu nữ 19 tuổi, chiếm đoạt 10 triệu đồng. Sau khi nhận được đơn tố giác, công an đã triệu tập Chinh và làm rõ hành vi của đối tượng này.",
+    "link": "https://tuoitre.vn/khoi-to-thanh-nien-tao-bill-chuyen-tien-gia-lua-lay-tien-that-2025032110562787.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 7,
+    "question": "Nguyễn Quang Chinh đã lừa đảo bằng cách nào?",
+    "answers": [
+      {
+        "text": "Tạo bill chuyển tiền giả",
+        "correct": true
+      },
+      {
+        "text": "Chuyển tiền thật từ tài khoản của mình",
+        "correct": false
+      },
+      {
+        "text": "Gọi điện để yêu cầu chuyển tiền",
+        "correct": false
+      },
+      {
+        "text": "Thuyết phục nạn nhân bằng lời nói",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Giá dừa khô tăng cao kỷ lục, 190.000 đồng/chục",
     "content": "Giá dừa khô tại Bến Tre đã tăng lên mức kỷ lục từ 180.000 đến 190.000 đồng/chục, với nhiều nhà vườn phấn khởi vì đây là giá cao nhất từ trước đến nay. Nguyên nhân dẫn đến sự tăng giá này là do sản lượng dừa giảm hơn 50% vì hiện tại dừa đang trong giai đoạn 'treo trái'. Ngoài ra, giá dừa tại các nước như Ấn Độ và Philippines cũng tăng mạnh, ảnh hưởng đến giá dừa Việt Nam. Các công ty chế biến dừa đang có nhiều đơn hàng xuất khẩu và giá các sản phẩm phụ từ dừa cũng đồng loạt tăng.",
     "link": "https://tuoitre.vn/gia-dua-kho-tang-cao-ky-luc-190-000-dong-chuc-20250321113326756.htm",
@@ -363,37 +390,6 @@
     ]
   },
   {
-    "title": "Chàng trai nặng 162 kg quyết giảm cân",
-    "content": "Chàng trai 24 tuổi tên Quang, nặng 162 kg, đang quyết tâm giảm cân để cải thiện sức khỏe và có thể đi du lịch cùng vợ con. Quang đã từng thử nhiều phương pháp giảm cân nhưng không thành công. Lần này, nhờ sự hỗ trợ từ các bác sĩ tại Bệnh viện Đa khoa Tâm Anh cùng chế độ ăn uống và vận động hợp lý, anh đã giảm được 15 kg chỉ sau hai tháng. Mục tiêu của Quang là giảm cân xuống dưới 100 kg để sống khỏe mạnh hơn.",
-    "link": "https://vnexpress.net/chang-trai-nang-162-kg-quyet-giam-can-4863841.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Chàng trai Quang nặng 162 kg đã giảm được bao nhiêu kg sau hai tháng?",
-    "answers": [
-      {
-        "text": "15 kg",
-        "correct": true
-      },
-      {
-        "text": "10 kg",
-        "correct": false
-      },
-      {
-        "text": "20 kg",
-        "correct": false
-      },
-      {
-        "text": "5 kg",
-        "correct": false
-      },
-      {
-        "text": "30 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bé sơ sinh viêm phổi do virus hợp bào hô hấp",
     "content": "Bé gái 22 ngày tuổi bị viêm phổi do virus hợp bào hô hấp (RSV) đã nhập viện trong tình trạng nghiêm trọng. Bé sinh non ở tuần 35 và đã có triệu chứng thở mệt, bú kém từ khi sinh. Sau khi điều trị tại Bệnh viện Đa khoa Tâm Anh TP HCM với các biện pháp như thở áp lực dương, hút đờm và sử dụng kháng sinh, tình trạng của bé đã cải thiện và được xuất viện sau hai tuần. Các bác sĩ nhấn mạnh trẻ sinh non có nguy cơ mắc viêm phổi RSV cao hơn trẻ đủ tháng, do đó cần có biện pháp phòng ngừa thích hợp.",
     "link": "https://vnexpress.net/be-so-sinh-viem-phoi-do-virus-hop-bao-ho-hap-4863942.html",
@@ -420,6 +416,37 @@
       },
       {
         "text": "Sởi",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chàng trai nặng 162 kg quyết giảm cân",
+    "content": "Chàng trai 24 tuổi tên Quang, nặng 162 kg, đang quyết tâm giảm cân để cải thiện sức khỏe và có thể đi du lịch cùng vợ con. Quang đã từng thử nhiều phương pháp giảm cân nhưng không thành công. Lần này, nhờ sự hỗ trợ từ các bác sĩ tại Bệnh viện Đa khoa Tâm Anh cùng chế độ ăn uống và vận động hợp lý, anh đã giảm được 15 kg chỉ sau hai tháng. Mục tiêu của Quang là giảm cân xuống dưới 100 kg để sống khỏe mạnh hơn.",
+    "link": "https://vnexpress.net/chang-trai-nang-162-kg-quyet-giam-can-4863841.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chàng trai Quang nặng 162 kg đã giảm được bao nhiêu kg sau hai tháng?",
+    "answers": [
+      {
+        "text": "15 kg",
+        "correct": true
+      },
+      {
+        "text": "10 kg",
+        "correct": false
+      },
+      {
+        "text": "20 kg",
+        "correct": false
+      },
+      {
+        "text": "5 kg",
+        "correct": false
+      },
+      {
+        "text": "30 kg",
         "correct": false
       }
     ]
@@ -1541,37 +1568,6 @@
     ]
   },
   {
-    "title": "Vướng tin đồn hẹn hò Kim Soo Hyun, dàn mỹ nhân Hàn nổi tiếng giờ ra sao?",
-    "content": "Bài viết đề cập đến tình hình hiện tại của các mỹ nhân Hàn Quốc từng có liên quan đến Kim Soo Hyun sau khi tin đồn hẹn hò giữa anh và Kim Sae Ron rộ lên. Kim Ji Won đang thăng hoa trong sự nghiệp nhờ vai diễn trong bộ phim \"Nữ hoàng nước mắt\", trong khi Seo Ye Ji lại gặp khó khăn do bê bối cá nhân. Ngoài ra, IU và Bae Suzy cũng được nhắc đến với những thành công trong sự nghiệp của họ, bất chấp những tin đồn hẹn hò trước đó với Kim Soo Hyun.",
-    "link": "https://dantri.com.vn/giai-tri/vuong-tin-don-hen-ho-kim-soo-hyun-dan-my-nhan-han-noi-tieng-gio-ra-sao-20250319002459238.htm",
-    "cat": "giai-tri",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Tình hình hiện tại của các mỹ nhân Hàn Quốc liên quan đến Kim Soo Hyun ra sao?",
-    "answers": [
-      {
-        "text": "Kim Ji Won đang thăng hoa trong sự nghiệp",
-        "correct": true
-      },
-      {
-        "text": "Seo Ye Ji đã ký nhiều hợp đồng quảng cáo",
-        "correct": false
-      },
-      {
-        "text": "IU chuẩn bị ra mắt album mới",
-        "correct": false
-      },
-      {
-        "text": "Bae Suzy bị chỉ trích vì tin đồn hẹn hò",
-        "correct": false
-      },
-      {
-        "text": "Tất cả các diễn viên đều nghỉ hưu",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cán bộ bị tinh giản tập quen môi trường tư nhân",
     "content": "Chị Nguyễn Thanh Tuyền, một viên chức nhà nước tại TP HCM, đã quyết định nghỉ việc để chuyển sang làm việc tại khu vực tư nhân sau khi cơ quan cô thực hiện Nghị quyết 18 về tinh gọn bộ máy. Tuy nhiên, chị cảm thấy bất ngờ vì yêu cầu tuyển dụng trong khu vực tư nhân thay đổi nhanh chóng và khó khăn hơn so với trước. Chị đã chủ động học hỏi và nâng cao kỹ năng để thích ứng với thị trường lao động mới, đồng thời nhận thấy rằng sự ổn định trong công việc không còn như trước. Chị Bùi Xuân Triều, một cựu viên chức khác, cũng chia sẻ rằng sự chuyển mình này tạo ra cơ hội mới và thách thức cho những người rời bỏ khu vực công.",
     "link": "https://vnexpress.net/can-bo-bi-tinh-gian-tap-quen-moi-truong-tu-nhan-4863487.html",
@@ -1598,6 +1594,37 @@
       },
       {
         "text": "Từ bỏ mọi cơ hội trong công việc",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những 'kẻ thù' âm thầm gây hại sức khỏe dân văn phòng",
+    "content": "Bài viết đề cập đến những bệnh lý phổ biến mà dân văn phòng thường gặp phải do thói quen sinh hoạt ít vận động và áp lực công việc. Những vấn đề sức khỏe như thừa cân, đau cổ vai gáy, đau lưng, và viêm xoang là những 'kẻ thù' âm thầm gây hại cho sức khỏe của họ. Bác sĩ Trần Đức Cảnh khuyến cáo rằng, để phòng tránh những bệnh này, nhân viên văn phòng cần duy trì chế độ ăn uống hợp lý, tập thể dục thường xuyên và thăm khám sức khỏe định kỳ.",
+    "link": "https://vnexpress.net/nhung-ke-thu-am-tham-gay-hai-suc-khoe-dan-van-phong-vnepre-4862276.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Dân văn phòng thường mắc phải những bệnh gì?",
+    "answers": [
+      {
+        "text": "Thừa cân, đau lưng, viêm xoang",
+        "correct": true
+      },
+      {
+        "text": "Bệnh tim mạch",
+        "correct": false
+      },
+      {
+        "text": "Bệnh tiểu đường",
+        "correct": false
+      },
+      {
+        "text": "Cảm cúm",
+        "correct": false
+      },
+      {
+        "text": "Bệnh hen suyễn",
         "correct": false
       }
     ]
@@ -1661,32 +1688,32 @@
     ]
   },
   {
-    "title": "Những 'kẻ thù' âm thầm gây hại sức khỏe dân văn phòng",
-    "content": "Bài viết đề cập đến những bệnh lý phổ biến mà dân văn phòng thường gặp phải do thói quen sinh hoạt ít vận động và áp lực công việc. Những vấn đề sức khỏe như thừa cân, đau cổ vai gáy, đau lưng, và viêm xoang là những 'kẻ thù' âm thầm gây hại cho sức khỏe của họ. Bác sĩ Trần Đức Cảnh khuyến cáo rằng, để phòng tránh những bệnh này, nhân viên văn phòng cần duy trì chế độ ăn uống hợp lý, tập thể dục thường xuyên và thăm khám sức khỏe định kỳ.",
-    "link": "https://vnexpress.net/nhung-ke-thu-am-tham-gay-hai-suc-khoe-dan-van-phong-vnepre-4862276.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Dân văn phòng thường mắc phải những bệnh gì?",
+    "title": "Vướng tin đồn hẹn hò Kim Soo Hyun, dàn mỹ nhân Hàn nổi tiếng giờ ra sao?",
+    "content": "Bài viết đề cập đến tình hình hiện tại của các mỹ nhân Hàn Quốc từng có liên quan đến Kim Soo Hyun sau khi tin đồn hẹn hò giữa anh và Kim Sae Ron rộ lên. Kim Ji Won đang thăng hoa trong sự nghiệp nhờ vai diễn trong bộ phim \"Nữ hoàng nước mắt\", trong khi Seo Ye Ji lại gặp khó khăn do bê bối cá nhân. Ngoài ra, IU và Bae Suzy cũng được nhắc đến với những thành công trong sự nghiệp của họ, bất chấp những tin đồn hẹn hò trước đó với Kim Soo Hyun.",
+    "link": "https://dantri.com.vn/giai-tri/vuong-tin-don-hen-ho-kim-soo-hyun-dan-my-nhan-han-noi-tieng-gio-ra-sao-20250319002459238.htm",
+    "cat": "giai-tri",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Tình hình hiện tại của các mỹ nhân Hàn Quốc liên quan đến Kim Soo Hyun ra sao?",
     "answers": [
       {
-        "text": "Thừa cân, đau lưng, viêm xoang",
+        "text": "Kim Ji Won đang thăng hoa trong sự nghiệp",
         "correct": true
       },
       {
-        "text": "Bệnh tim mạch",
+        "text": "Seo Ye Ji đã ký nhiều hợp đồng quảng cáo",
         "correct": false
       },
       {
-        "text": "Bệnh tiểu đường",
+        "text": "IU chuẩn bị ra mắt album mới",
         "correct": false
       },
       {
-        "text": "Cảm cúm",
+        "text": "Bae Suzy bị chỉ trích vì tin đồn hẹn hò",
         "correct": false
       },
       {
-        "text": "Bệnh hen suyễn",
+        "text": "Tất cả các diễn viên đều nghỉ hưu",
         "correct": false
       }
     ]
@@ -1750,33 +1777,6 @@
     ]
   },
   {
-    "title": "Nhà trường phủ nhận việc học sinh phải đóng quỹ hội trại 5 triệu đồng",
-    "content": "Hiệu trưởng Trường THPT Phan Châu Trinh tại Đà Nẵng đã phủ nhận thông tin cho rằng học sinh phải đóng quỹ hội trại 5 triệu đồng, khẳng định đây là tin đồn không chính xác. Ông Nguyễn Quang Hưng cho biết trường chỉ tổ chức hội trại cho khối 11 và mọi chi phí sẽ được thống nhất với phụ huynh. Ông cũng nhấn mạnh rằng không có đòi hỏi phải thuê biên đạo cho các hoạt động văn nghệ của trường.",
-    "link": "https://dantri.com.vn/giao-duc/nha-truong-phu-nhan-viec-hoc-sinh-phai-dong-quy-hoi-trai-5-trieu-dong-20250320185132628.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Nhà trường có yêu cầu học sinh đóng quỹ hội trại 5 triệu đồng không?",
-    "answers": [
-      {
-        "text": "Không, nhà trường không yêu cầu đóng quỹ này.",
-        "correct": true
-      },
-      {
-        "text": "Có, học sinh phải đóng quỹ 5 triệu đồng.",
-        "correct": false
-      },
-      {
-        "text": "Nhà trường đang xem xét việc thu quỹ hội trại.",
-        "correct": false
-      },
-      {
-        "text": "Học sinh phải đóng quỹ nhưng số tiền thấp hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "'Nổ' thực phẩm chức năng như thuốc chữa bệnh",
     "content": "Bài viết chỉ ra tình trạng người tiêu dùng bị lừa đảo bởi quảng cáo thổi phồng công dụng của thực phẩm chức năng, khiến họ nhầm lẫn giữa thực phẩm chức năng và thuốc chữa bệnh. Nhiều trường hợp đã dẫn đến hậu quả nghiêm trọng cho sức khỏe, như ngộ độc hoặc vô sinh do sử dụng sản phẩm không rõ nguồn gốc. Bộ Y tế và các chuyên gia khuyến cáo người dân cần thận trọng khi sử dụng thực phẩm chức năng, chỉ nên dùng khi cần thiết và tham khảo ý kiến chuyên gia trước khi sử dụng.",
     "link": "https://vnexpress.net/no-thuc-pham-chuc-nang-nhu-thuoc-chua-benh-4862172.html",
@@ -1799,6 +1799,33 @@
       },
       {
         "text": "Thực phẩm chức năng không cần kiểm tra nguồn gốc.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nhà trường phủ nhận việc học sinh phải đóng quỹ hội trại 5 triệu đồng",
+    "content": "Hiệu trưởng Trường THPT Phan Châu Trinh tại Đà Nẵng đã phủ nhận thông tin cho rằng học sinh phải đóng quỹ hội trại 5 triệu đồng, khẳng định đây là tin đồn không chính xác. Ông Nguyễn Quang Hưng cho biết trường chỉ tổ chức hội trại cho khối 11 và mọi chi phí sẽ được thống nhất với phụ huynh. Ông cũng nhấn mạnh rằng không có đòi hỏi phải thuê biên đạo cho các hoạt động văn nghệ của trường.",
+    "link": "https://dantri.com.vn/giao-duc/nha-truong-phu-nhan-viec-hoc-sinh-phai-dong-quy-hoi-trai-5-trieu-dong-20250320185132628.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Nhà trường có yêu cầu học sinh đóng quỹ hội trại 5 triệu đồng không?",
+    "answers": [
+      {
+        "text": "Không, nhà trường không yêu cầu đóng quỹ này.",
+        "correct": true
+      },
+      {
+        "text": "Có, học sinh phải đóng quỹ 5 triệu đồng.",
+        "correct": false
+      },
+      {
+        "text": "Nhà trường đang xem xét việc thu quỹ hội trại.",
+        "correct": false
+      },
+      {
+        "text": "Học sinh phải đóng quỹ nhưng số tiền thấp hơn.",
         "correct": false
       }
     ]
